--- a/v3/authentication/index.html
+++ b/v3/authentication/index.html
@@ -26,13 +26,13 @@
   <header class="row">
     <div class="centered clearfix">
       <h1>
-        <a href="http://www.deem.com/developer/"><img src="/shared/images/deem_developers.png" alt="Deem Developers" /></a>
+        <a href="http://www.deem.com/developer/"><img src="/shared/images/deem_logo.png" alt="Deem Developers" /></a>
       </h1>
       <nav>
         <ul>
           <li><a href="http://www.deem.com/developer/">Home</a></li>
           <li><a href="/" class="active">Documentation</a></li>
-          <li><a href="mailto:support@deem.com">Support</a></li>
+          <li><a href="https://www.deem.com/programs/support">Support</a></li>
         </ul>
       </nav>
     </div>
@@ -78,6 +78,7 @@
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/deals/">Region Deals</a><span class="icon-arrow-right"></span></li>
+          <li><a href="/v3/regions/deals/">V3 Region Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/">Users</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/access_tokens/">User Access Tokens</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/users/card_links/">User Card Links</a><span class="icon-arrow-right"></span></li>
@@ -134,18 +135,16 @@ unique API username &amp; password with each request. <b>You must keep your uniq
       <nav>
         <ul class="left">
           <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
-          <li><a href="http://www.deem.com/work">Save</a></li>
-          <li><a href="http://www.deem.com/merchant">Sell</a></li>
-          <li><a href="http://www.deem.com/" target="_blank">Partner</a></li>
+          <li><a href="https://www.deem.com/products/">Products</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
-          <li><a href="http://www.deem.com/developer">Develop</a></li>
+          <li><a href="http://www.deem.com/developer">Developers</a></li>
         </ul>
 
         <ul class="right">
-          <li><a href="http://www.deem.com/" target="_blank">About Us</a></li>
+          <li><a href="https://www.deem.com/company/about" target="_blank">About Us</a></li>
           <li><a href="http://www.deem.com/privacy/terms.html" target="_blank">Terms</a></li>
           <li><a href="http://www.deem.com/privacy/global-privacy-statement.html" target="_blank">Privacy</a></li>
-          <li><a href="mailto:needhelp@deem">Feedback</a></li>
+          <li><a href="https://www.deem.com/programs/support">Feedback</a></li>
         </ul>
       </nav>
       <p>&copy; 1999-2014 Deem, Inc. All rights reserved.</p>
