--- a/v1/adunits/index.html
+++ b/v1/adunits/index.html
@@ -168,7 +168,7 @@ If no deals are identified for the ad units, then a stand-by ad unit is rendered
   <div class="centered">
       <nav>
         <ul class="left">
-          <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
+          <li><a href="http://www.deem.com/"><img src="/shared/images/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
           <li><a href="https://www.deem.com/products/">Products</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
           <li><a href="http://www.deem.com/developer">Developers</a></li>
