--- a/v1/targeted_emails/batches/index.html
+++ b/v1/targeted_emails/batches/index.html
@@ -323,7 +323,7 @@ Limited to 10 000 scheduled user ids per send_at day.</p>
   <div class="centered">
       <nav>
         <ul class="left">
-          <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
+          <li><a href="http://www.deem.com/"><img src="/shared/images/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
           <li><a href="https://www.deem.com/products/">Products</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
           <li><a href="http://www.deem.com/developer">Developers</a></li>
