--- a/v1/users/index.html
+++ b/v1/users/index.html
@@ -386,7 +386,7 @@ was not included on the request then the reponse will be</li>
   <div class="centered">
       <nav>
         <ul class="left">
-          <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
+          <li><a href="http://www.deem.com/"><img src="/shared/images/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
           <li><a href="https://www.deem.com/products/">Products</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
           <li><a href="http://www.deem.com/developer">Developers</a></li>
