--- a/v3/resellers/purchases/index.html
+++ b/v3/resellers/purchases/index.html
@@ -355,7 +355,7 @@ though they may have little to no meaning for some requests.</p>
   <div class="centered">
       <nav>
         <ul class="left">
-          <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
+          <li><a href="http://www.deem.com/"><img src="/shared/images/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
           <li><a href="https://www.deem.com/products/">Products</a></li>
           <li><a href="http://blog.deem.com/">Discover</a></li>
           <li><a href="http://www.deem.com/developer">Developers</a></li>
